[package]
name = "LM_service_status_dashboard"
version = "0.1.0"
edition = "2021"


[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
tower-http = { version = "0.5", features = ["fs", "cors"] }
tower = "0.4"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thirtyfour = "0.32"
chrono = { version = "0.4", features = ["serde"] }